runs but no image

--- a/QtWidgetsApplication1/QtWidgetsApplication1.vcxproj
+++ b/QtWidgetsApplication1/QtWidgetsApplication1.vcxproj
@@ -104,6 +104,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\external\chai3d-3.2.0\src\devices\CHapticDeviceHandler.cpp" />
     <ClCompile Include="..\..\external\LowPassFilter\LowPassFilter.cpp" />
     <ClCompile Include="src\c4dofdevice.cpp" />
     <ClCompile Include="src\c4DOFGripper.cpp" />
@@ -122,6 +123,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\external\chai3d-3.2.0\src\devices\CGenericHapticDevice.h" />
     <ClInclude Include="..\..\external\LowPassFilter\LowPassFilter.hpp" />
     <ClInclude Include="Application.h" />
     <ClInclude Include="include\ATC3DG.h" />
