got one finger back but the second still doesn't appear

--- a/QtWidgetsApplication1/QtWidgetsApplication1.vcxproj.filters
+++ b/QtWidgetsApplication1/QtWidgetsApplication1.vcxproj.filters
@@ -74,6 +74,9 @@
     <ClCompile Include="..\..\external\LowPassFilter\LowPassFilter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\external\chai3d-3.2.0\src\devices\CHapticDeviceHandler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Application.h">
